--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -1,4 +1,4 @@
-.hero-container {
+.hero-wraper {
    padding-top: 395px;
    padding-bottom: 20px;
    padding-left: 20px;
@@ -9,30 +9,25 @@
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    border-radius: 30px;
    background-color: #1e1823;
-   background-image: linear-gradient(
-         180deg,
+   background-image: linear-gradient(180deg,
          rgba(17, 17, 17, 0) 0%,
-         rgba(17, 17, 17, 0.4) 100%
-      ),
+         rgba(17, 17, 17, 0.4) 100%),
       url(../img/hero/hero-bc-mobile-x1.jpg);
 }
+
 @media screen and (min-device-pixel-ratio: 2),
-   screen and (min-resolution: 192dpi),
-   screen and (min-resolution: 2dppx) {
-   .hero-container {
-      background-image: linear-gradient(
-            180deg,
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+   .hero-wraper {
+      background-image: linear-gradient(180deg,
             rgba(17, 17, 17, 0) 0%,
-            rgba(17, 17, 17, 0.4) 100%
-         ),
+            rgba(17, 17, 17, 0.4) 100%),
          url(../img/hero/hero-bc-mobile-x2.jpg);
    }
 }
 
 .hero {
    padding-bottom: 72px;
-   padding-left: 20px;
-   padding-right: 20px;
 }
 
 .hero-hidden-title {
@@ -83,6 +78,7 @@
 
    transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .how-its-made-button {
    padding: 12px 28px;
    border: 1px solid #ffffff;
@@ -91,6 +87,7 @@
 
    transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .scroll-down-button {
    font-weight: 500;
    font-size: 12px;
@@ -102,6 +99,7 @@
    align-items: center;
    gap: 12px;
 }
+
 .scroll-down-icon {
    width: 28px;
    height: 28px;
@@ -116,98 +114,95 @@
       max-width: 295px;
    }
 }
-/* MOBILE 375-767 */
-@media screen and (min-width: 375px) and (max-width: 767px) {
-}
+
 /* TABLET */
 @media screen and (min-width: 768px) {
-   .container {
-      max-width: 768px;
-   }
    .hero {
       padding-bottom: 50px;
    }
+
    .hero-subtitle {
       font-size: 28px;
       width: 484px;
    }
+
    .buy-now-button {
       padding: 14px 40px;
       min-width: 144px;
    }
+
    .how-its-made-button {
       padding: 14px 40px;
       min-width: 183px;
    }
+
    .hero-buttons {
       margin-bottom: 0;
    }
+
    .hero-actions {
       display: flex;
       justify-content: space-between;
    }
+
    .scroll-down-button {
       font-size: 14px;
       line-height: 1.29;
    }
+
    .scroll-down-button {
       gap: 14px;
    }
+
    .scroll-down-icon {
       width: 38px;
       height: 38px;
    }
-   .hero-container {
+
+   .hero-wraper {
       padding-top: 671px;
       padding-right: 40px;
       padding-bottom: 40px;
       padding-left: 40px;
-      background-image: linear-gradient(
-            180deg,
+      background-image: linear-gradient(180deg,
             rgba(17, 17, 17, 0) 0%,
-            rgba(17, 17, 17, 0.4) 100%
-         ),
+            rgba(17, 17, 17, 0.4) 100%),
          url(/img/hero/hero-bc-tablet-x1.jpg);
    }
+
    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 768px),
-      screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      .hero-container {
-         background-image: linear-gradient(
-               180deg,
+   screen and (min-resolution: 192dpi) and (min-width: 768px),
+   screen and (min-resolution: 2dppx) and (min-width: 768px) {
+      .hero-wraper {
+         background-image: linear-gradient(180deg,
                rgba(17, 17, 17, 0) 0%,
-               rgba(17, 17, 17, 0.4) 100%
-            ),
+               rgba(17, 17, 17, 0.4) 100%),
             url(/img/hero/hero-bc-tablet-x2.jpg);
       }
    }
 }
+
 /* DESCTOP */
 @media screen and (min-width: 1200px) {
-   .hero-container {
+   .hero-wraper {
       padding-top: 381px;
-      background-image: linear-gradient(
-            180deg,
+      background-image: linear-gradient(180deg,
             rgba(17, 17, 17, 0) 0%,
-            rgba(17, 17, 17, 0.4) 100%
-         ),
+            rgba(17, 17, 17, 0.4) 100%),
          url(/img/hero/hero-bc-desktop-x1.jpg);
    }
+
    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 768px),
-      screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      .hero-container {
-         background-image: linear-gradient(
-               180deg,
+   screen and (min-resolution: 192dpi) and (min-width: 768px),
+   screen and (min-resolution: 2dppx) and (min-width: 768px) {
+      .hero-wraper {
+         background-image: linear-gradient(180deg,
                rgba(17, 17, 17, 0) 0%,
-               rgba(17, 17, 17, 0.4) 100%
-            ),
+               rgba(17, 17, 17, 0.4) 100%),
             url(/img/hero/hero-bc-desktop-x2.jpg);
       }
    }
-   .container {
-      max-width: 1166px;
-   }
+
    .hero {
       padding-bottom: 72px;
    }
