--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
    />
-   <link rel="stylesheet" href="./css/styles.css">
+
+   <link rel="stylesheet" href="./css/styles.css" />
+   <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+   />
 </head>
 <body></body>
