--- a/src/css/section-products.css
+++ b/src/css/section-products.css
@@ -35,6 +35,7 @@
 
 .section-product-item {
    width: 100%;
+   margin-right: 18px;
    background-color: var(--Main-white);
    text-align: center;
    border: 1px solid rgba(17, 17, 17, 0.1);
