--- a/src/css/section-products.css
+++ b/src/css/section-products.css
@@ -28,9 +28,10 @@
    color: var(--Orange);
 }
 
-.swiper-product {
-   width: 100%;
-   height: 100%;
+.section-product-list {
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 
 .section-product-item {
